fix(ui): remove scrollbar on collapsed group layer
Closes #482

--- a/src/content/styles/modules/_toc.scss
+++ b/src/content/styles/modules/_toc.scss
@@ -44,7 +44,7 @@ $layer-item-height: rem(6.0);
 
         > li {
             position: relative;
-            overflow: auto;
+            overflow: hidden;
         }
         // rotate the icon on the toggle button on open
         .md-toggle-icon {
